@@ -1,5 +1,18 @@
 #!/usr/bin/env bash
 
+export_env_dir() {
+  env_dir=$1
+  whitelist_regex=${2:-''}
+  blacklist_regex=${3:-'^(PATH|GIT_DIR|CPATH|CPPATH|LD_PRELOAD|LIBRARY_PATH|JAVA_OPTS)$'}
+  if [ -d "$env_dir" ]; then
+    for e in $(ls $env_dir); do
+      echo "$e" | grep -E "$whitelist_regex" | grep -qvE "$blacklist_regex" &&
+      export "$e=$(cat $env_dir/$e)"
+      :
+    done
+  fi
+}
+
 ## SBT 0.10 allows either *.sbt in the root dir, or project/*.scala or .sbt/*.scala
 detect_sbt() {
   local ctxDir=$1
@@ -129,17 +142,16 @@ prime_ivy_cache() {
   fi
   scalaVersion=$(get_scala_version "$ctxDir" "$sbtUserHome" "$launcher" "$playVersion")
 
-  echo -n "-----> Priming Ivy cache"
   if [ -n "$scalaVersion" ]; then
-    echo -n " (Scala-${scalaVersion}"
+    cachePkg=" (Scala-${scalaVersion}"
     if [ -n "$playVersion" ]; then
-      echo -n ", Play-${playVersion}"
+      cachePkg="${cachePkg}, Play-${playVersion}"
     fi
-    echo -n ")"
+    cachePkg="${cachePkg})"
   fi
-  echo -n "..."
+  status_pending "Priming Ivy cache${cachePkg}"
   if _download_and_unpack_ivy_cache "$sbtUserHome" "$scalaVersion" "$playVersion"; then
-    echo " done"
+    status_done
   else
     echo " no cache found"
   fi
@@ -150,7 +162,7 @@ _download_and_unpack_ivy_cache() {
   local scalaVersion=$2
   local playVersion=$3
 
-  baseUrl="http://heroku-jvm-langpack-scala.s3.amazonaws.com/sbt-cache"
+  baseUrl="http://lang-jvm.s3.amazonaws.com/sbt/v2/sbt-cache"
   if [ -n "$playVersion" ]; then
     ivyCacheUrl="$baseUrl-play-${playVersion}_${scalaVersion}.tar.gz"
   else
@@ -171,6 +183,14 @@ has_supported_sbt_version() {
   local ctxDir=$1
   local supportedVersion="$(get_supported_sbt_version ${ctxDir})"
   if [ "$supportedVersion" != "" ] ; then
+    return 0
+  else
+    return 1
+  fi
+}
+
+has_old_preset_sbt_opts() {
+  if [ "$SBT_OPTS" = "-Xmx384m -Xss512k -XX:+UseCompressedOops" ]; then
     return 0
   else
     return 1
@@ -227,38 +247,46 @@ universal_packaging_default_web_proc() {
 
 run_sbt()
 {
-  local home=$1
-  local launcher=$2
-  local tasks=$3
+  local javaVersion=$1
+  local home=$2
+  local launcher=$3
+  local tasks=$4
 
-  #if [ ${maxSbtHeap:-""} == "" ]; then
-    case $(ulimit -u) in
-    32768) # PX Dyno
-      maxSbtHeap=6144
-      ;;
-    *)     # 2X Dyno
-      maxSbtHeap=1024
-      ;;
-    esac
-  #fi
+  case $(ulimit -u) in
+  32768) # PX Dyno
+    maxSbtHeap=5220
+    ;;
+  *)     # 2X Dyno
+    maxSbtHeap=768
+    ;;
+  esac
 
-  JAVA_OPTS="-Xms768M -Xmx${maxSbtHeap}M -Xss4M -XX:MaxPermSize=512M -XX:+CMSClassUnloadingEnabled"
-  JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF8 -Dsbt.log.noformat=true"
-  JAVA_OPTS="$JAVA_OPTS -Duser.home=$home"
-  JAVA_OPTS="$JAVA_OPTS -Divy.default.ivy.user.dir=$home/.ivy2"
-  JAVA_OPTS="$JAVA_OPTS -Dsbt.global.base=$home"
-
-  echo "-----> Running: sbt $tasks"
-  HOME="$home" java $JAVA_OPTS -jar $launcher $tasks < /dev/null 2>&1 | sed -u 's/^/       /'
+  status "Running: sbt $tasks"
+  HOME="$home" sbt \
+    -J-Xmx${maxSbtHeap}M \
+    -J-Xms${maxSbtHeap}M \
+    -J-XX:+UseCompressedOops \
+    -sbt-dir $home \
+    -ivy $home/.ivy2 \
+    -sbt-launch-dir $home/launchers \
+    -Duser.home=$home \
+    -Divy.default.ivy.user.dir=$home/.ivy2 \
+    -Dfile.encoding=UTF8 \
+    -Dsbt.global.base=$home \
+    -Dsbt.log.noformat=true \
+    -no-colors -batch \
+    $tasks < /dev/null 2>&1 | indent
 
   if [ "${PIPESTATUS[*]}" != "0 0" ]; then
-    error "Failed to run sbt task: $tasks"
-  fi
-}
+    error "Failed to run sbt!
+We're sorry this build is failing! If you can't find the issue in application
+code, please submit a ticket so we can help: https://help.heroku.com
+You can also try reverting to our legacy Scala buildpack:
+$ heroku buildpack:set https://github.com/heroku/heroku-buildpack-scala#legacy
 
-error() {
-    echo " !     $1"
-    exit 1
+Thanks,
+Heroku"
+  fi
 }
 
 cache_copy() {
